Implemented metric to display relative power of selected items, as a percentage of the most powerful item available in each slot. Adjusted minimum item power filter based on this information.

--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,20 @@
 TODO
-    Metrics: list the normalized score by slot for items in final set.
-    Optimize: Adjust item score cutoff.
     Crafted item sources
         Cannith
+            Trinket
+                No Sockets
+            Gloves
+            Belt
+            Amulet
+            Helm
+            Goggles
+            Armors
+                5 variants: Robe, Light, Medium, Heavy, Docent
+            Bracers
+            Cape
+            Ring
+            Boots
+            Weapon
     Feywild set definitions
     Import Feywild items
     Implement augments
