--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,8 @@
 TODO
     Crafted item sources
+        Cleanup cannithScraper.js
         Cannith
             Trinket
-                No Sockets
             Gloves
             Belt
             Amulet
