Bug fix: Candidate items once again correctly filter by percentage effectiveness compared to the best available item in each equipment slot.

--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,9 @@
 TODO
     Crafted item sources
         Cannith
-            Hook in to optimizer
             Clean up
         Clean up
+    Profile code
     Feywild set definitions
         Move set bonuses over to JSONs
     Import Feywild items
