Added item set attained set bonuses display. Fixed some bugs with stat parsing.

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 TODO
-    Build gear set set bonuses display
+    Finish implementing LoadoutRefinement
     Move all set bonuses over to JSONs
     Implement augments
         (EquipmentLoadout, StatScorer) -> Set<Augment>
