Fixed a bug where NamedStats with a bonus type in the name (E.G. "Legendary Freezing Ice") were mis-parsing.

--- a/todo.txt
+++ b/todo.txt
@@ -3,11 +3,18 @@ TODO
         Bug: NamedStats with "legendary" (or any bonustype string) may be mis-parsing.
         Implement recent item named stats
             Recent named item NamedStats
-                Left off at U47, working backwards.
+                Left off at U45, working backwards.
     SetBonus cleanup
         Move all set bonuses over to JSONs
         Reimplement to use StatTemplates.
         Pre-unpack nested NamedStats inside SetBonuses
+    Optimize:
+        Pre-unpack NamedStats on Items, builds, etc.
+    Figure out what's next:
+        Different levels support?
+        Another spec?
+        Valuation function dimension prioritization "slider"?
+        Export gear set to color-coded Excel?
     Implement augments
         (EquipmentLoadout, StatScorer) -> Set<Augment>
         Per augment series:
@@ -18,8 +25,6 @@ TODO
         Fill most restricted slots first
             Use highest score that still fits in that slot
                 Strike from list
-    Optimize:
-        Pre-unpack NamedStats on Items, builds, etc.
     Implement weapon stats, particularly Duality vs Fetters
 
 Implement automatic minor artifact flagging
